--- a/frontend_mobile/html/index.html
+++ b/frontend_mobile/html/index.html
@@ -22,10 +22,9 @@
             </div>
 
             <div id = "top-bar">
-                <div id = 'transition-element'></div>
                 <div id = "menu-icon">
-                    <img src = "../../resources/burger.png" class = "menu-closed">
-                    <img src = "../../resources/close.png" class = "menu-opened">
+                    <img src = "../../resources/burger.png" class = "menu-closed" alt = "menu icon">
+                    <img src = "../../resources/close.png" class = "menu-opened" alt = "menu icon">
                 </div>
 
                 <h1 class = "menu-closed">Menu</h1>
@@ -35,15 +34,27 @@
 
         <div id = "container">
             <div id = 'logo-mark'>
+                <img src = "../../resources/logo.png" alt = "thalia symposium cybercrime logo">
+            </div>
 
+            <div class = 'terminal-object'>
+                <p>Symposium Shell <br> [ Version 04.0.02509.1105 ]</p>
+                <p>(c) Copyright Symposium Committee 2023. <br> All rights reserved.</p>
+            </div>
+
+            <div class = 'terminal-object'>
+                <p>root@thalia-user: ~/sbin$ cat> <span id = "page-name"></span></p>
             </div>
 
             <div id = 'content'>
-
+                
             </div>
 
-            <div id = 'footer'>
-
+            <div id = 'footer' class = 'terminal-object'>
+                <p>root@thalia-user: ~/Local$: cat> Info.txt</p>
+                <br>
+                <p>[ OK ] theactual.email.@thalia.nu - e-mail</p>
+                <p>[ OK ] 001122334455 - phone number</p>
             </div>
         </div>
 
